<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp">

        <TextView android:id="@+id/Nombre"
            android:text="@string/Nombre"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <EditText android:id="@+id/edNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:maxLength="16"
            android:layout_weight="0.7"
            android:hint="@string/Nombre"
            android:maxLines="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="134dp">
        <TextView android:id="@+id/errorNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="15dp">

        <TextView android:id="@+id/apellido1"
            android:text="@string/apellido1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <EditText android:id="@+id/edApellido1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:maxLength="20"
            android:layout_weight="1"
            android:hint="@string/apellido1"
            android:maxLines="1" />

    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:layout_marginLeft="134dp">
    <TextView android:id="@+id/errorApellido1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="15dp"/>
</LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="15dp">

        <TextView android:id="@+id/apellido2"
            android:text="@string/apellido2"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <EditText android:id="@+id/edApellido2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:layout_weight="1"
            android:hint="@string/apellido2"
            android:maxLines="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="134dp">
        <TextView android:id="@+id/errorApellido2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="15dp">

        <TextView android:id="@+id/email"
            android:text="@string/email"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <EditText android:id="@+id/edEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:ems="10"
            android:maxLength="30"
            android:layout_weight=".6"
            android:hint="@string/email"
            android:maxLines="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="134dp">
        <TextView android:id="@+id/errorEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="15dp">

        <TextView android:id="@+id/telefono"
            android:text="@string/telefono"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"/>

        <EditText android:id="@+id/edTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="9"
            android:ems="10"
            android:layout_weight="0.6"
            android:hint="@string/telefono"
            android:maxLines="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="134dp">
        <TextView android:id="@+id/errorTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical">

        <ImageButton
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCancelar"
            android:layout_weight="1" />

        <ImageButton
            android:src="@android:drawable/ic_menu_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btGuardar"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>